# stuff_master

./: .gitignore  CMakeLists.txt  Makefile  evaluate.py  superpix.py  test_volumina.py  watershed.py
c++/: CMakeLists.txt  f_score.hpp  fuzzy_gt_projection.hpp  pybindings.cpp  silence.hpp  slic.cpp  slic.hpp  test.cpp  test_bindings.py  utilities.cpp  utilities.hpp
c++/pybindings/: error_measures.cpp  gt_projections.cpp  silence.cpp
pybindings/: pybindings.cpp
python/: agglomerative_clustering.py  insert_labels.py  stack_h5_data.py  superpix.py  test_volumina.py  volumina_double_layer.py  volumina_single_layer.py  watershed.py
python/analysis/: RandIndex.py  VariationOfInformation.py  agglomerative_clustering.py  compare_superpix.py  evaluate.py  get_gt.py  graph_class.py  graphical_models.py  isbi_2012_tools.py  myelin.py  precompute_features.py  project_gt.py  slic.py  superpix.py  watershed.py
python/learning/: compare_rfs.py  implicit_boundary_rf.py  learn_pix_rf_from_gt.py
python/tools/: extract_labels.py  extract_layer_from_hdf5.py  insert_labels.py  normalize.py  precompute_features.py  predict_ilastik.py  read_dojo.py  remove_labels.py  remove_slice_fromh5.py  res_to_tif.py  slice_data.py  stack_h5_data.py  tif_to_h5.py  volumina_double_layer.py  volumina_viewer.py
python/visualisations/: plot_weighting.py
results/: plot_feats_varimp.py  plot_xy.py  read_in_txt.py  results.py  statistics.py
results/cross_validation/: crossvalidationresults_curves_anisotropicisbi2013_nn_train_False  (+21 more)
test/: test_bindings.py
thesis/: structure_rough_idea
(+85 files in other folders)
